修改jdk为1.7，去除1.8的api